--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,3 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-server:
-  port: 8769
 spring:
-  application:
-    name: zira-graphql
+  profiles:
+    active: '@spring.profiles.active@'
