--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,6 +2,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://zira-eureka/eureka/
+    healthcheck:
+      enabled: true
+    enabled: true
 server:
   port: 80
 spring:
@@ -11,3 +14,32 @@ spring:
     name: zira-graphql
   profiles:
     active: dev
+management:
+  endpoints:
+    web:
+      exposure:
+        include: ["health","beans","env","prometheus","info","metrics"]
+      base-path: /
+  #      enabled-by-default: true
+  endpoint:
+    auditevents:
+      enabled: true
+      cache:
+        time-to-live: 10s
+    beans:
+      enabled: true
+    conditions:
+      enabled: true
+    configprops:
+      enabled: true
+    prometheus:
+      enabled: true
+  metrics:
+    tags:
+      application:
+        ${spring:application:name}
+    export:
+      prometheus:
+        pushgateway:
+          base-url: 101.132.169.36:9091
+          enabled: true
