--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 eureka:
   client:
-    serviceUrl:
+    service-url:
       defaultZone: http://zira-eureka/eureka/
     healthcheck:
       enabled: true
