--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -49,3 +49,7 @@ management:
         pushgateway:
           base-url: 101.132.169.36:9091
           enabled: true
+
+essproperties:
+  jwt-token-secret: zira-2020
+  user-token-duration: 10800000
