--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -43,3 +43,7 @@ management:
         pushgateway:
           base-url: 101.132.169.36:9091
           enabled: true
+
+essproperties:
+  jwt-token-secret: zira-2020
+  user-token-duration: 180
